# wikipedia-research-crew

./: .gitignore  README.md  pyproject.toml
knowledge/: user_preference.txt
src/docs_agent/: crew.py  main.py
src/docs_agent/config/: agents.yaml  tasks.yaml
src/docs_agent/tools/: wikipedia_tool.py
