[project]
name = "wikipedia_research_crew"
version = "0.1.0"
description = "Wikipedia Research Crew using crewAI and local Ollama"
authors = [{ name = "Vinod Loganathan Ramesh Kumar", email = "vidonlogan2@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.8.1",
    "wikipedia",
    "litellm>=1.75.3",
    "fastapi",
    "apscheduler",
    "email-validator",
    "fastapi-sso"
]

[project.scripts]
wikipedia_research_crew = "docs_agent.main:run"
run_crew = "docs_agent.main:run"
train = "docs_agent.main:train"
replay = "docs_agent.main:replay"
test = "docs_agent.main:test"
run_with_trigger = "docs_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docs_agent"]


[tool.crewai]
type = "crew"
